[ISSUE #15634] Backport API authorization fixes to v3.2.4 (#15636)
* Fix reviewed HTTP authorization metadata

Assisted-by: Claude Code

* Protect Prometheus service discovery subpaths

Assisted-by: Claude Code

* Secure plugin availability cluster requests

Assisted-by: Claude Code

* Honor explicit authorization resource parsers

Assisted-by: Claude Code

* Fix AgentSpec authorization resource parsing

Assisted-by: Claude Code

* Adapt authorization backport to v3.2.4

Assisted-by: Claude Code